# TopoLite

./: .gitignore
cmake/: TopoliteDependencies.cmake  TopoliteDownloadExternal.cmake
ext/: CMakeLists.txt
test/Interlocking/: Test_IPOPT_implementation.cpp  ipopt_problems.h
